--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,15 +12,19 @@ steps:
       - 'functions'
       - 'deploy'
       - '$_FUNCTIONS_NAME'
-      - '--entry-point main'
-      - '--source .'
+      - '--entry-point' 
+      - 'main'
+      - '--source' 
+      - '.'
       - '--trigger-event-filters="bucket=$_BUCKET"'
       - '--trigger-event-filters="type=google.cloud.storage.object.v1.finalized"'
       - '--gen2'
       - '--serve-all-traffic-latest-revision'
-      - '--memory 1024MiB'
+      - '--memory' 
+      - '1024MiB'
       - '--region asia-southeast2'
-      - '--env-vars-file ./.env'
+      - '--env-vars-file'
+      - './.env'
       - '--service-account $_SERVICE_ACCOUNT'
 logsBucket: 'gs://findup-logs/cloud-build/$_CONTEXT/logs'
 options:
