--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,10 +22,12 @@ steps:
       - '--serve-all-traffic-latest-revision'
       - '--memory' 
       - '1024MiB'
-      - '--region asia-southeast2'
+      - '--region' 
+      - 'asia-southeast2'
       - '--env-vars-file'
       - './.env'
-      - '--service-account $_SERVICE_ACCOUNT'
+      - '--service-account'
+      - '$_SERVICE_ACCOUNT'
 logsBucket: 'gs://findup-logs/cloud-build/$_CONTEXT/logs'
 options:
   logging: GCS_ONLY
