--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,8 +16,10 @@ steps:
       - 'main'
       - '--source' 
       - '.'
-      - '--trigger-event-filters="bucket=$_BUCKET"'
-      - '--trigger-event-filters="type=google.cloud.storage.object.v1.finalized"'
+      - '--trigger-event-filters'
+      - 'bucket=$_BUCKET'
+      - '--trigger-event-filters'
+      - 'type=google.cloud.storage.object.v1.finalized'
       - '--gen2'
       - '--serve-all-traffic-latest-revision'
       - '--memory' 
